--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/bootstrap.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev:build": "cross-env NODE_ENV=development webpack --mode development",
-    "dev:server": "cross-env NODE_ENV=development nodemon --watch dist/server/bootstrap.js",
+    "dev:build": "cross-env NODE_ENV=development webpack --mode development --watch",
+    "dev:server": "cross-env NODE_ENV=development nodemon --watch dist/server/bootstrap.js dist/server/bootstrap.js",
     "dev": "concurrently \"npm run dev:build\" \"npm run dev:server\"",
     "start": "cross-env NODE_ENV=production node dist/server/bootstrap.js",
     "test": "jest",
@@ -14,7 +14,7 @@
     "test:coverage": "jest --coverage",
     "format": "biome format --write .",
     "lint": "biome lint .",
-    "check": "biome check --apply .",
+    "check": "biome check .",
     "prepare": "husky install"
   },
   "author": "Aleksandr Melnik",
@@ -29,6 +29,7 @@
     "nexus-ioc-react-adapter": "^0.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
@@ -43,13 +44,17 @@
     "@types/webpack-hot-middleware": "^2.25.9",
     "@types/webpack-node-externals": "^3.0.4",
     "concurrently": "^9.1.0",
+    "css-loader": "^7.1.2",
     "husky": "^9.1.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.10",
+    "mini-css-extract-plugin": "^2.9.2",
     "nexus-ioc-graph-visualizer": "^0.1.6",
     "nodemon": "^3.1.7",
+    "null-loader": "^4.0.1",
+    "style-loader": "^4.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
@@ -57,12 +62,10 @@
     "typescript": "^5.3.3",
     "webpack-dev-middleware": "^7.4.2",
     "webpack-hot-middleware": "^2.26.1",
+    "webpack-manifest-plugin": "^5.0.0",
     "webpack-node-externals": "^3.0.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "biome check --apply",
-      "biome format --write"
-    ]
+    "./src/*.{js,jsx,ts,tsx}": ["npx @biomejs/biome lint . --write"]
   }
 }
